--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <body onload= getRandomQuestion()>
-    
     <h1 class="welcome">Welcome to Flash Cards!</h1>    
+ 
 <div class= "maincontainer">
-        <button class="check">Check Answer</button>   
-        <button class="next">Next Question</button>
+
+    <button class="check">Check Answer</button>
+    <button class="next">Next Question</button>
         <div class= "card" id="card">
-            
-        <h3 class ='question'>Question</h3>
-   
-        <h3 class ='answer'>Answer</h3> 
-        </div>
+            <div class ='question'><h3>Question</h3>
+                <div class="choices">
+            </div>
+            </div>
+            <div class ='answer'>Answer</div>
 </div>
+</div>
+
+
+
+   
+
+
 
     <script src="script.js"></script>
 
