--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
 
     <button class="check">Check Answer</button>
     <button class="next">Next Question</button>
-        <div class= "card" id="card">
-            <div class ='question'><h3>Question</h3>
+
+        <div class="card" id="card">
+
+            <div class="question-container">
+                <h3 class='question'>Question</h3>
+
                 <div class="choices">
+                    <button id="choice-a"></button>
+                    <button id="choice-b"></button>
+                    <button id="choice-c"></button>
+                </div>
             </div>
-            </div>
-            <div class ='answer'>Answer</div>
-</div>
+            <div class='answer'>Answer</div>
+
+        </div>
 </div>
 
 
