--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
 <div class= "maincontainer">
 
-    <button class="check">Check Answer</button>
+    <!-- <button class="check">Check Answer</button> -->
     <button class="next">Next Question</button>
 
         <div class="card" id="card">
