--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Flash Cards</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/callie-chalk-font" rel="stylesheet">
+</head>    
 <body onload= getRandomQuestion()>
     <h1 class="welcome">Welcome to Flash Cards!</h1>    
  
